<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>unit731</groupId>
	<artifactId>Hunspeller</artifactId>
	<version>1.4.0-SNAPSHOT</version>

	<packaging>jar</packaging>

	<build>
		<plugins>
			<!-- Maven Source Plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.0.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- Maven Deploy Plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>2.8.2</version>
			</plugin>
			<!-- Templating Maven Plugin -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>templating-maven-plugin</artifactId>
				<version>1.0.0</version>
				<executions>
					<execution>
						<id>generate-version-class</id>
						<goals>
							<goal>filter-sources</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- Maven Shade Plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<!-- Run shade goal on package phase -->
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<minimizeJar>true</minimizeJar>
					<shadedArtifactAttached>true</shadedArtifactAttached>
					<shadedClassifierName>shaded</shadedClassifierName>
					<filters>
						<filter>
							<artifact>commons-io:commons-io</artifact>
							<includes>
								<include>org.apache.commons.io.IOUtils</include>
							</includes>
						</filter>
						<!-- FIXME: strenghten the inclusions -->
						<filter>
							<artifact>com.fasterxml.jackson.core:jackson-databind</artifact>
							<includes>
								<include>**</include>
							</includes>
						</filter>
						<filter>
							<artifact>commons-logging:commons-logging</artifact>
							<includes>
								<include>**</include>
							</includes>
						</filter>
						<filter>
							<artifact>com.google.code.findbugs:annotations</artifact>
							<excludes>
								<exclude>**</exclude>
							</excludes>
						</filter>
						<filter>
							<artifact>*:*</artifact>
							<excludes>
								<exclude>AUTHORS</exclude>
								<exclude>LICENSE</exclude>
								<exclude>changelog.txt</exclude>
								<exclude>latestchanges.html</exclude>
								<exclude>release-timestamp.txt</exclude>
								<exclude>.netbeans_automatic_build</exclude>
								<exclude>META-INF/LICENSE</exclude>
								<exclude>META-INF/LICENSE.txt</exclude>
								<exclude>META-INF/NOTICE</exclude>
								<exclude>META-INF/NOTICE.txt</exclude>
							</excludes>
						</filter>
					</filters>
					<transformers>
						<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
							<mainClass>unit731.hunspeller.HunspellerFrame</mainClass>
						</transformer>
					</transformers>
				</configuration>
			</plugin>
		</plugins>

		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<includes>
					<include>*.*</include>
				</includes>
				<filtering>true</filtering>
			</resource>
		</resources>
	</build>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>10</maven.compiler.source>
		<maven.compiler.target>10</maven.compiler.target>

		<build.timestamp>${maven.build.timestamp}</build.timestamp>
		<maven.build.timestamp.format>yyyy-MM-dd</maven.build.timestamp.format>

		<!-- Apache -->
		<org.apache.commons.lang3.version>3.8.1</org.apache.commons.lang3.version>
		<org.apache.commons.text.version>1.4</org.apache.commons.text.version>
		<org.apache.commons.math3.version>3.6.1</org.apache.commons.math3.version>
		<org.apache.commons.io.version>2.6</org.apache.commons.io.version>

		<!-- XChart -->
		<org.knowm.xchart.version>3.5.2</org.knowm.xchart.version>

		<!-- Murmur3 Hash -->
		<com.sangupta.murmur.version>1.0.0</com.sangupta.murmur.version>

		<!-- Jackson -->
		<com.fasterxml.jackson.version>2.9.7</com.fasterxml.jackson.version>

		<!-- CarrotSearch sizeof -->
		<com.carrotsearch.sizeof.version>0.0.5</com.carrotsearch.sizeof.version>

		<!-- Logging -->
		<ch.qos.logback.version>1.2.3</ch.qos.logback.version>

		<!-- JUnit -->
		<junit.version>4.12</junit.version>
		<!-- FindBugs -->
		<com.google.code.findbugs.version>3.0.1</com.google.code.findbugs.version>
	</properties>

	<dependencies>
		<!-- Apache -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>${org.apache.commons.lang3.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-text</artifactId>
			<version>${org.apache.commons.text.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-math3</artifactId>
			<version>${org.apache.commons.math3.version}</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>${org.apache.commons.io.version}</version>
		</dependency>

		<!-- XChart -->
		<dependency>
			<groupId>org.knowm.xchart</groupId>
			<artifactId>xchart</artifactId>
			<version>${org.knowm.xchart.version}</version>
		</dependency>

		<!-- Bloom filter: For computing Murmur hashes -->
		<dependency>
			<groupId>com.sangupta</groupId>
			<artifactId>murmur</artifactId>
			<version>${com.sangupta.murmur.version}</version>
		</dependency>

		<!-- Jackson -->
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>${com.fasterxml.jackson.version}</version>
		</dependency>

		<!-- Memory usage -->
<!--		<dependency>
			<groupId>com.carrotsearch</groupId>
			<artifactId>java-sizeof</artifactId>
			<version>${com.carrotsearch.sizeof.version}</version>
		</dependency>-->

		<!-- Logging -->
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>${ch.qos.logback.version}</version>
		</dependency>

		<!-- JUnit -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<!-- ConcurrentUnit -->
<!--		<dependency>
			<groupId>net.jodah</groupId>
			<artifactId>concurrentunit</artifactId>
			<version>${concurrent.unit.version}</version>
			<scope>test</scope>
		</dependency>-->
		<!-- FindBugs -->
		<dependency>
			<groupId>com.google.code.findbugs</groupId>
			<artifactId>annotations</artifactId>
			<version>${com.google.code.findbugs.version}</version>
		</dependency>
	</dependencies>
</project>